mini-portifólio-md-V2
mini-portifólio-md css modificado

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
       <div class="conteudo">
         <ul class="abas">
           <li class="aba selecionado" id="sobre-mim">
-            <img src="./src/imagens/sobre.gif" alt="icone de sobre mim" />
+            <img src="./src/imagens/lista.png" alt="icone de sobre mim" />
           </li>
           <li class="aba" id="minhas-redes">
-            <img src="./src/imagens/coracao.gif" alt="icone de redes sociais" />
+            <img
+              src="./src/imagens/midia-social.png"
+              alt="icone de redes sociais"
+            />
           </li>
         </ul>
         <div class="informacoes-abas">
@@ -56,7 +59,7 @@
             <ul class="redes-sociais">
               <li>
                 <a
-                  href="https://docs.google.com/document/d/1y29qJelptW_dI6KlpK9LLGVusSQfaGkfQ6sTuH9CJcM/edit?usp=sharing"
+                  href="https://1drv.ms/b/s!Ah_monyz7EU6gjKDjCIydcelDiUH?e=Qh8A9M"
                   target="_blank"
                   class="curriculo"
                   >Currículo</a
@@ -65,7 +68,7 @@
 
               <li>
                 <a
-                  href="https://www.linkedin.com/company/dev-em-dobro/"
+                  href="https://www.linkedin.com/in/edvandejesus"
                   target="_blank"
                   class="linkedin"
                   >LinkedIn</a
@@ -73,7 +76,7 @@
               </li>
               <li>
                 <a
-                  href="https://github.com/devemdobro"
+                  href="https://github.com/edjesus01"
                   target="_blank"
                   class="github"
                   >GitHub</a
